--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
       </nav>
       <div class="max-w-6xl mx-auto mt-20">
-        <div class="flex justify-between py-3 flex-col">
-          <div class="flex flex-col flex-1 md:pt-28">
+        <div class="flex justify-between py-3 flex-col md:flex-row">
+          <div class="flex flex-col flex-1 md:pt-28 ">
             <h1 class="md:w-[680px] mb-6">We Capture the World</h1>
             <p class="w-[430px] text-md">
               At our studio, we don't just take pictures - we capture the world.
@@ -108,7 +108,7 @@
         <div class="text-left">
           <h2 class="font-bold text text-center md:text-left">Our work</h2>
         </div>
-        <div class="flex py-16 gap-5 flex-col">
+        <div class="flex py-16 gap-5 flex-col md:flex-row">
           <!-- img container  -->
           <div class="flex flex-col gap-5">
             <img
